<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/app_bar_main"
        app:subtitleTextColor="@color/md_theme_onPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@color/md_theme_onPrimary" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_info"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/md_theme_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerColor="@color/md_theme_onTertiary"
            app:dividerInsetEnd="@dimen/margin_m"
            app:dividerInsetStart="@dimen/margin_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_v"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_s"
            app:dividerColor="@color/md_theme_onTertiary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_info_mileage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onTertiary"
            android:textSize="@dimen/str_main_info"
            app:layout_constraintBottom_toTopOf="@id/divider_h"
            app:layout_constraintEnd_toStartOf="@id/divider_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="75,000Km" />

        <TextView
            android:id="@+id/tv_info_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onTertiary"
            android:textSize="@dimen/str_main_info"
            app:layout_constraintBottom_toTopOf="@id/divider_h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider_v"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="100%" />

        <TextView
            android:id="@+id/tv_info_efficiency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onTertiary"
            android:textSize="@dimen/str_main_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_h"
            tools:text="10.0Km/kWh" />

        <TextView
            android:id="@+id/tv_info_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onTertiary"
            android:textSize="@dimen/str_main_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider_v"
            app:layout_constraintTop_toBottomOf="@id/divider_h"
            tools:text="320,300원" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_record_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_info"
        tools:listitem="@layout/item_record" />

    <ImageView
        android:id="@+id/img_empty_list"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_empty_list_image"
        android:layout_marginBottom="@dimen/margin_l"
        android:src="@drawable/img_main_empty_list"
        app:layout_constraintBottom_toTopOf="@id/tv_empty_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_empty_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_empty_list"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_empty_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/ic_add_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>